# app

./: .all-contributorsrc  .deepsource.toml  .gitignore  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yml  index.html  requirements.txt  sitemap.xml
.github/: CODE_OF_CONDUCT.md
.github/Templates/: BUG_REPORT.md  FEATURE_REQUEST.md  PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md
client/: README.md  package.json  quasar.conf.js
docs/: LICENSE.md  README.md  mkdocs.yml  requirements.txt
docs/docs/: impact.md  index.md  overview.md  resources.md
experiments/notebooks/: README.md  environment.yaml  osm_to_postgis.ipynb  proximity.ipynb  pyproject.toml
experiments/ui_experiment/: .eslintrc.js  README.md  package-lock.json  package.json  quasar.conf.js
impact/: index.html
notebooks/: README.md  osm_to_postgis.ipynb
overview/: index.html
platform/: env.template  manage.py
platform/administrative_areas/: apps.py
platform/administrative_divisions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
platform/core/: asgi.py  settings.py  urls.py  wsgi.py
platform/front_page/: apps.py  views.py
platform/openstreetmap/: apps.py  queries.py  urls.py  views.py
platform/patterns/: apps.py  forms.py  models.py  urls.py  views.py
platform/places/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
platform/projects/: admin.py  apps.py  forms.py  (+4 more)
requirements/: base.txt  local.txt  production.txt
resources/: index.html
search/: search_index.json
sustainable_urban_design_space/: manage.py
(+135 files in other folders)
