[tool.poetry]
name = "sustainable-urban-design-notebooks"
version = "0.1.0"
description = "Experimental notebooks for the Sustainable Urban Design Space project."
authors = ["Brylie Christopher Oxley <brylie@amble.fi>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
