[tool.poetry]
name = "suds-notebooks"
version = "0.1.0"
description = "Experimental notebooks for the Sustainable Urban Design Space project."
authors = ["Brylie Christopher Oxley <brylie@amble.fi>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.2.2"
geopandas = "^0.8.1"
folium = "^0.11.0"
pyproj = "^2.6.1"
jupyterlab-git = "^0.20.0"
matplotlib = "^3.3.0"
descartes = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
